--- a/PART A/Convolutional_Neural_Network.ipynb
+++ b/PART A/Convolutional_Neural_Network.ipynb
@@ -69,7 +69,7 @@
           "shell.execute_reply": "2022-03-27T07:15:29.667857Z"
         },
         "trusted": true,
-        "id": "iZ1ag-MVp_uL"
+        "id": "HHXOuh3tu5Cu"
       },
       "execution_count": null,
       "outputs": []
@@ -88,7 +88,7 @@
           "shell.execute_reply": "2022-03-27T07:15:44.822820Z"
         },
         "trusted": true,
-        "id": "BQrmetVZp_uS"
+        "id": "-_uz6zxeu5Cz"
       },
       "execution_count": null,
       "outputs": []
@@ -188,7 +188,7 @@
           "shell.execute_reply": "2022-03-27T07:16:31.940187Z"
         },
         "trusted": true,
-        "id": "fbzHZV-Lp_ul"
+        "id": "X4bzFKuwu5DH"
       },
       "execution_count": null,
       "outputs": []
@@ -244,7 +244,7 @@
         "### Visualizing some training images"
       ],
       "metadata": {
-        "id": "4cqD2bDfp_ut"
+        "id": "rztv3F5-u5DV"
       }
     },
     {
@@ -262,7 +262,7 @@
           "shell.execute_reply": "2022-03-27T07:16:33.458556Z"
         },
         "trusted": true,
-        "id": "2m-4Antqp_uv"
+        "id": "-S_gzkowu5DY"
       },
       "execution_count": null,
       "outputs": []
@@ -293,6 +293,42 @@
           "shell.execute_reply": "2022-03-27T07:16:36.426207Z"
         },
         "trusted": true
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Function to set WandB run name"
+      ],
+      "metadata": {
+        "id": "h0D04xWaHG1Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def setWandbName(n_filters, filter_multiplier, augment, dropout, batch_norm):\n",
+        "    \n",
+        "    batch_norm_dict = {True: \"Y\", False: \"N\"}\n",
+        "    augment_dict = {True: \"Y\", False: \"N\"}\n",
+        "\n",
+        "    name = \"_\".join([\"num\", str(n_filters), \"org\", str(filter_multiplier), \"aug\", augment_dict[augment],\n",
+        "                      \"drop\", str(dropout), \"norm\", batch_norm_dict[batch_norm]])\n",
+        "    \n",
+        "    return name;"
+      ],
+      "metadata": {
+        "execution": {
+          "iopub.status.busy": "2022-03-27T07:16:36.429674Z",
+          "iopub.execute_input": "2022-03-27T07:16:36.430239Z",
+          "iopub.status.idle": "2022-03-27T07:16:36.436344Z",
+          "shell.execute_reply.started": "2022-03-27T07:16:36.430200Z",
+          "shell.execute_reply": "2022-03-27T07:16:36.435766Z"
+        },
+        "trusted": true,
+        "id": "VgLM4wbzu5Dh"
       },
       "execution_count": null,
       "outputs": []
