Function for WandB Training

--- a/PART A/Convolutional_Neural_Network.ipynb
+++ b/PART A/Convolutional_Neural_Network.ipynb
@@ -332,6 +332,57 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Function to train the dataset"
+      ],
+      "metadata": {
+        "id": "XfPKFk5mu5Dj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train_wandb(config= None):\n",
+        "\n",
+        "    '''best_config = {\n",
+        "        \"n_filters\": 64,\n",
+        "        \"filter_multiplier\": 2,\n",
+        "        \"augment_data\": True,\n",
+        "        \"dropout\": 0.3,\n",
+        "        \"batch_norm\": True,\n",
+        "        \"epochs\": 20,\n",
+        "        \"dense_size\": 32,\n",
+        "        \"lr\": 0.001\n",
+        "    }'''\n",
+        "    \n",
+        "    wandb.init(project=\"Convolutional Neural Networks\", entity=\"cs21s048-cs21s058\")\n",
+        "    config = wandb.config\n",
+        "    print(config.augment_data)\n",
+        "    wandb.run.name = setWandbName(config.n_filters, config.filter_multiplier, config.augment_data, config.dropout, config.batch_norm)\n",
+        "\n",
+        "    train, val, test = train_dataset(augmentation=config.augment_data, batch_size=config.batch_size)\n",
+        "\n",
+        "    model = CNN(n_filters=config.n_filters, filter_multiplier=config.filter_multiplier,\n",
+        "                      dropout= config.dropout, batch_norm = config.batch_norm, dense_size= config.dense_size)\n",
+        "    model.compile(optimizer=keras.optimizers.Adam(config.lr), loss=\"categorical_crossentropy\", metrics=\"categorical_accuracy\")\n",
+        "    model.fit(train, epochs=config.epochs, validation_data=val, callbacks=[WandbCallback()])"
+      ],
+      "metadata": {
+        "id": "NwHvUd0GDgl-",
+        "execution": {
+          "iopub.status.busy": "2022-03-27T07:16:36.437463Z",
+          "iopub.execute_input": "2022-03-27T07:16:36.437822Z",
+          "iopub.status.idle": "2022-03-27T07:16:37.781100Z",
+          "shell.execute_reply.started": "2022-03-27T07:16:36.437788Z",
+          "shell.execute_reply": "2022-03-27T07:16:37.780331Z"
+        },
+        "trusted": true
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
