--- a/PART A/Convolutional_Neural_Network.ipynb
+++ b/PART A/Convolutional_Neural_Network.ipynb
@@ -383,6 +383,46 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train(config= None):\n",
+        "\n",
+        "    '''best_config = {\n",
+        "        \"n_filters\": 64,\n",
+        "        \"filter_multiplier\": 2,\n",
+        "        \"augment_data\": True,\n",
+        "        \"dropout\": 0.3,\n",
+        "        \"batch_norm\": True,\n",
+        "        \"batch_size\" : 128,\n",
+        "        \"epochs\": 20,\n",
+        "        \"dense_size\": 32,\n",
+        "        \"lr\": 0.001\n",
+        "    }'''\n",
+        "\n",
+        "    train, val, test = train_dataset(augmentation=True, batch_size=128)\n",
+        "\n",
+        "    model = CNN(n_filters=64, filter_multiplier=2,\n",
+        "                      dropout= 0.3, batch_norm = True, dense_size= 32)\n",
+        "    model.compile(optimizer=keras.optimizers.Adam(0.001), loss=\"categorical_crossentropy\", metrics=\"categorical_accuracy\")\n",
+        "    model.fit(train, epochs=20, validation_data=val)\n",
+        "    print(\"testing Model: \")\n",
+        "    model.evaluate(test, batch_size=128)"
+      ],
+      "metadata": {
+        "execution": {
+          "iopub.status.busy": "2022-03-27T07:16:37.782535Z",
+          "iopub.execute_input": "2022-03-27T07:16:37.783038Z",
+          "iopub.status.idle": "2022-03-27T07:16:38.489744Z",
+          "shell.execute_reply.started": "2022-03-27T07:16:37.783000Z",
+          "shell.execute_reply": "2022-03-27T07:16:38.488561Z"
+        },
+        "trusted": true,
+        "id": "EdVQkSj3u5Dq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
