--- a/PART A/Convolutional_Neural_Network.ipynb
+++ b/PART A/Convolutional_Neural_Network.ipynb
@@ -423,6 +423,78 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Setting up wandb sweep"
+      ],
+      "metadata": {
+        "id": "fdndK1fDu5Dt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sweep_config = {\n",
+        "    \"name\": \"Final Sweep(Bayesian)\",\n",
+        "    \"description\": \"Tuning hyperparameters\",\n",
+        "    'metric': {\n",
+        "      'name': 'val_categorical_accuracy',\n",
+        "      'goal': 'maximize'\n",
+        "  },\n",
+        "    \"method\": \"bayes\",\n",
+        "    \"project\": \"CS6910_Assignment2\",\n",
+        "    \"parameters\": {\n",
+        "        \"n_filters\": {\n",
+        "        \"values\": [16, 32, 64]\n",
+        "        },\n",
+        "        \"filter_multiplier\": {\n",
+        "            \"values\": [0.5, 1, 2]\n",
+        "        },\n",
+        "        \"augment_data\": {\n",
+        "            \"values\": [True]\n",
+        "        },\n",
+        "        \"dropout\": {\n",
+        "            \"values\": [0.3, 0.5]\n",
+        "        },\n",
+        "        \"batch_norm\": {\n",
+        "            \"values\": [False, True]\n",
+        "        },\n",
+        "        \"epochs\": {\n",
+        "            \"values\": [5, 10]\n",
+        "        },\n",
+        "        \"dense_size\": {\n",
+        "            \"values\": [32, 64, 128]\n",
+        "        },\n",
+        "        \"lr\": {\n",
+        "            \"values\": [0.01, 0.001]\n",
+        "        },\n",
+        "        \"batch_size\": {\n",
+        "            \"values\": [64, 128, 256]\n",
+        "        },\n",
+        "        \"activation\": {\n",
+        "            \"values\": [\"relu\", \"leaky\"]\n",
+        "        },\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "# creating the sweep\n",
+        "sweep_id = wandb.sweep(sweep_config, project=\"Convolutional Neural Networks\", entity=\"cs21s048-cs21s058\")"
+      ],
+      "metadata": {
+        "id": "MlVwjHpfEfIt",
+        "execution": {
+          "iopub.status.busy": "2022-03-27T07:16:38.497424Z",
+          "iopub.execute_input": "2022-03-27T07:16:38.499897Z",
+          "iopub.status.idle": "2022-03-27T07:16:38.951156Z",
+          "shell.execute_reply.started": "2022-03-27T07:16:38.499849Z",
+          "shell.execute_reply": "2022-03-27T07:16:38.950382Z"
+        },
+        "trusted": true
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
